clang/test/utils/update-verify-tests/Inputs/update-same-line.c
void foo() {
    bar = 2;     //   expected-error       {{asdf}}
}

